update to guardFence function